css/parser/tests/errors/url/parenthesis/output.stderr
error: Expected "}"
 --> $DIR/tests/errors/url/parenthesis/input.css:3:2
  |
3 | }
  |  ^

error: Expected Declaration value
 --> $DIR/tests/errors/url/parenthesis/input.css:2:17
  |
2 |       background: url(test\);
  |  _________________^
3 | | }
  | |_^

